(lang dune 3.23)

(name modified-gauss)

(generate_opam_files true)

; (source
 ; (github username/reponame))

(authors "Vihaan Jim <vihaanjim@proton.me>")

; (maintainers "Maintainer Name <maintainer@example.com>")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name modified-gauss)
 ; (synopsis "A short synopsis")
 ; (description "A longer description")
 (depends ocaml batteries))
 ; (tags
  ; ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
